# aura

./: .dockerignore  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  deny.toml  docker-compose.test.yml  fly.toml  mkdocs.yml  server.toml
.github/: PULL_REQUEST_TEMPLATE.md  zizmor.yml
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature.yml
.github/workflows/: ci.yml  commitlint.yml  desktop.yml  macos.yml  security.yml  zizmor.yml
clients/desktop/: App.axaml  App.axaml.cs  Aura.Desktop.csproj  MsQuicLoader.cs  Program.cs  QuicSupport.cs  app.manifest  run.sh  runtimeconfig.template.json
clients/desktop/Converters/: BoolToColorConverter.cs  UIConverters.cs
clients/desktop/Services/: AudioManager.cs  AudioPlayback.cs  AuraNetworkClient.cs  KnownServers.cs  MicrophoneCapture.cs  MlsWrapper.cs  NativeLibraryLoader.cs  RustAudioEngine.cs  TextCryptoService.cs  UserIdentity.cs
clients/desktop/Tests/: Aura.Desktop.Tests.csproj  MlsProtocolTests.cs
clients/desktop/ViewModels/: MainWindowViewModel.cs
clients/desktop/Views/: MainWindow.axaml  MainWindow.axaml.cs
clients/macos/: run-tests.sh
clients/macos/Aura/: Aura-Bridging-Header.h  Aura.entitlements  AuraApp.swift  ContentView.swift  RUNNING.md
clients/macos/Aura.xcodeproj/: project.pbxproj
clients/macos/Aura/Extensions/: Notification+Aura.swift
clients/macos/Aura/Models/: AppSettings.swift  AudioSettings.swift  ServerProfile.swift  UserProfileModel.swift
clients/macos/Aura/Services/: AudioCapture.swift  AudioDeviceManager.swift  AudioPipeline.swift  AudioPlayback.swift  HotkeyManager.swift  ProfileManager.swift  QuicNetworkClient.swift  ServerManager.swift  Speaker.swift  TtsManager.swift  UserIdentity+SecureEnclave.swift  UserIdentity.swift
clients/macos/Aura/UI/: AuraTheme.swift  View+Modifiers.swift
clients/macos/Aura/Views/: AudioSettingsView.swift  LoginView.swift  ProfileListView.swift  ProfileView.swift  ServerEditView.swift  ServerListView.swift  SettingsView.swift  UserProfileEditView.swift
clients/macos/Aura/Views/Components/: HotkeyRecorderButton.swift  WebView.swift
clients/macos/AuraTests/: AuraTests.swift  ConnectionRetryTests.swift  EdgeCaseTests.swift  FuzzTests.swift  IntegrationTests.swift  MlsProtocolTests.swift  ProfileManagerTests.swift  README.md  SecureEnclaveTests.swift  ServerManagerTests.swift  UserIdentityTests.swift
clients/macos/AuraUITests/: AuraUITests.swift  AuraUITestsLaunchTests.swift
crates/aura-core/: Cargo.toml  build.rs
crates/aura-core/src/: audio_io.rs  audio_pipeline.rs  aura.udl  crypto.rs  jitter_buffer.rs  lib.rs  mls.rs  noise_suppression.rs  opus.rs  opus16.rs  tests_audio.rs  tests_crypto.rs  text_crypto.rs  tts.rs  uniffi_bindings.rs  vad.rs  voice_session.rs  webrtc_processor.rs
crates/aura-core/tests/: audio_pipeline_tests.rs  crypto_security_tests.rs
crates/aura-protocol/: Cargo.toml  build.rs
crates/aura-protocol/src/: aura.proto  fast_header.rs  lib.rs  signaling.proto
crates/aura-server/: Cargo.toml
crates/aura-server/src/: auth.rs  config.rs  connection.rs  db.rs  lib.rs  main.rs  rate_limit.rs  state.rs
crates/aura-server/tests/: acme_tests.rs  state_tests.rs
crates/opus16-sys/: Cargo.toml  build.rs
crates/opus16-sys/src/: lib.rs
docs/: 05_dave_protocol_deviations.md  06_dave_expert_review.md  07_diagram_review.md  08_security_review.md  FUZZING.md  MLS_SECURITY.md  ROADMAP.md  csharp-client-migration.md  index.md  protobuf-migration.md  speaker-indicators.md
docs/development/: architecture_patterns.md  codec_and_protocol.md  testing_standards.md  vendoring-opus.md
docs/diagrams/: 01_protocol_flow.md  02_server_architecture.md  03_client_architecture.md  03_desktop_client_architecture.md  04_audio_pipeline.md
docs/protocol/: control_stream.md
scripts/: build_macos.sh  pull-opus.sh
