[package]
name = "aura-core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib", "cdylib"]
name = "aura_core"

[dependencies]
aura-protocol = { path = "../aura-protocol" }
uniffi = { version = "0.25.3", features = ["cli"] }
lazy_static = "1.4"
prost = "0.12"
bytes = "1.0"
thiserror = "1.0"
openmls = { version = "0.5", default-features = false }
audiopus = "0.2"
cpal = "0.15"
tokio = { version = "1.0", features = ["full"] }

[build-dependencies]
uniffi = { version = "0.25", features = ["build"] }
