[package]
name = "aura-core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib", "cdylib"]
name = "aura_core"

[dependencies]
aura-protocol = { path = "../aura-protocol" }
uniffi = { version = "0.30", features = ["cli"] }
lazy_static = "1.4"
regex = "1.11"
prost = "0.14"
bytes = "1.0"
thiserror = "2.0"
opus16-sys = { path = "../opus16-sys" }
cpal = { version = "0.16", optional = true }
tokio = { version = "1.48", features = ["full"] }
# DAVE Protocol Encryption
chacha20poly1305 = "0.10"
rand = "0.9"
openmls = { version = "0.7.1" }
openmls_rust_crypto = "0.4"
hex = "0.4.3"
openmls_basic_credential = "0.4.1"
uuid = { version = "1.19.0", features = ["v4"] }
nnnoiseless = "0.5.2"

[features]
default = ["native-audio"]
native-audio = ["dep:cpal"]

[build-dependencies]
uniffi = { version = "0.30", features = ["build"] }
