[package]
name = "aura-core"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[lib]
crate-type = ["staticlib", "cdylib"]
name = "aura_core"

[dependencies]
aura-protocol = { path = "../aura-protocol" }
uniffi = { version = "0.29.0", features = ["cli"] }
lazy_static = "1.5.0"
regex = "1.12.3"
prost = "0.14.3"
bytes = "1.10.0"
thiserror = "2.0.18"
opus16-sys = { path = "../opus16-sys" }
cpal = { version = "0.17.3", optional = true }
tokio = { version = "1.51.1", features = ["full"] }
# DAVE Protocol Encryption
chacha20poly1305 = "0.10.1"
rand = "0.10.0"
openmls = { version = "0.8.1" }
openmls_rust_crypto = "0.5.0"
hex = "0.4.3"
openmls_basic_credential = "0.5.0"
uuid = { version = "1.23.0", features = ["v4"] }
nnnoiseless = "0.5.2"
tracing = "0.1.41"
webrtc-audio-processing = { version = "2.0.0", optional = true, features = ["bundled"] }

[features]
default = ["native-audio"]
native-audio = ["dep:cpal"]
webrtc-audio = ["dep:webrtc-audio-processing"]

[build-dependencies]
uniffi = { version = "0.29.0", features = ["build"] }
