[package]
name = "aura-protocol"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[features]
default = ["rand"]
rand = ["dep:rand"]

[dependencies]
prost = "0.14.3"
bytes = "1.11"
thiserror = "2.0.18"
rand = { version = "0.10.1", optional = true }

[build-dependencies]
prost-build = "0.14.3"
