[package]
name = "aura-server"
version = "0.1.0"
edition = "2021"

[dependencies]
aura-protocol = { path = "../aura-protocol" }
tokio = { version = "1.0", features = ["full", "macros"] }
quinn = "0.10"
dashmap = "5.5"
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
futures = "0.3"
rustls = "0.21"
prost = "0.12"
bytes = "1.0"
rcgen = "0.11"

# Configuration
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Database
rusqlite = { version = "0.30", features = ["bundled"] }

# Authentication
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
rand = "0.8"
hex = "0.4"
