[package]
name = "aura-server"
version = "0.1.0"
edition = "2021"

[dependencies]
aura-protocol = { path = "../aura-protocol" }
tokio = { version = "1.48", features = ["full", "macros"] }
quinn = "0.11"
dashmap = "6.1"
thiserror = "2.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
futures = "0.3"
rustls = { version = "0.23", default-features = false, features = ["ring"] }
prost = "0.14"
bytes = "1.0"
rcgen = "0.14"

# Configuration
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Database
rusqlite = { version = "0.37", features = ["bundled"] }

# Authentication
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
rand = "0.8"

# MLS Protocol (for server delivery service)
openmls = "0.7.1"
openmls_rust_crypto = "0.4"
openmls_basic_credential = "0.4.1"

hex = "0.4"
uuid = { version = "1.19.0", features = ["v4"] }
