[package]
name = "aura-server"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
aura-protocol = { path = "../aura-protocol" }
tokio = { version = "1.51.1", features = ["full", "macros"] }
quinn = "0.11.9"
dashmap = "6.1.0"
thiserror = "2.0.18"
anyhow = "1.0.102"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
futures = "0.3.31"
tokio-stream = { version = "0.1.18", features = ["net"] }
rustls = { version = "0.23.37", default-features = false, features = ["ring"] }
rustls-acme = { version = "0.15.1", features = ["tokio", "axum"] }
axum = "0.7.9"
rustls-pemfile = "2.2.0"
prost = "0.14.3"
bytes = "1.11"
rcgen = "0.14.7"

# Configuration
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
toml = "0.9.8"

# Database
rusqlite = { version = "0.39.0", features = ["bundled"] }

# Authentication
ed25519-dalek = { version = "2.2.0", features = ["rand_core"] }
rand = "0.10.0"

# MLS Protocol (for server delivery service)
openmls = "0.8.1"
openmls_rust_crypto = "0.5.0"
openmls_basic_credential = "0.5.0"

hex = "0.4.3"
uuid = { version = "1.23.0", features = ["v4"] }

# Rate limiting (per-IP handshake throttle)
governor = "0.10.4"
nonzero_ext = "0.3.0"
